# viaticum

./: .env.example  .gitignore  Dockerfile.backend  Dockerfile.frontend  Dockerfile.frontend_react  Makefile  README.md  docker-compose.kis.yml  docker-compose.yml  start.sh
backend/: pyproject.toml
backend/app/: main.py
backend/app/db/: connection.py  schema.sql  seed.py
backend/app/models/: chat.py  entities.py  omi.py  soap.py  stt.py
backend/app/prompts/: chat_de.txt  soap_de.txt
backend/app/routers/: chat.py  entities.py  ingest.py  omi.py  patients.py  search.py  soap.py  transcribe.py
backend/app/services/: ai_router.py  firestore_client.py  gliner_extractor.py  llm_router.py  omi_mcp_client.py  opensearch_rag.py  rag.py  rag_router.py  search_polisher.py  soap_structurer.py  stt_gradium.py  stt_parakeet.py  tavily.py
backend/tests/: conftest.py  test_chat.py  test_entities.py  test_health.py  test_omi.py  test_soap.py  test_transcribe.py
claude_code/: AGENTS.md  AURAMED_PLAN.md  backend_agent.md  frontend_agent.md  integration_agent.md  omi_agent.md  (+2 more)
frontend/: api_client.py  pyproject.toml  streamlit_app.py
frontend/components/: companion.py  kis_mockup.css  omni_assistant.py
frontend/i18n/: de.json
frontend/mocks/: chat.json  entities.json  soap.json  transcript.json
frontend/pages/: 1_Patientenorganizer.py  2_ZNA_Triage.py  3_Live_Consultation.py  4_Companion_Setup.py
frontend/tests/: test_companion.py
pioneer/: 01_generate_synthetic_data.py  02_finetune_gemma.py  03_finetune_gliner.py  04_evaluate.py  README.md  pyproject.toml
(+124 files in other folders)
