[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "viaticum-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "httpx>=0.27",
    "pydantic>=2.7",
    "python-multipart>=0.0.9",
    "websockets>=12",
    "chromadb>=0.5",
    "opensearch-py>=2.4",
    "sentence-transformers>=3",
    "python-dotenv>=1.0",
    "google-cloud-firestore>=2.16",
]

[project.optional-dependencies]
test = ["pytest>=8", "pytest-asyncio>=0.23", "httpx>=0.27"]

[tool.setuptools.packages.find]
where = [".."]
include = ["backend*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
