[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "viaticum-frontend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.35",
    "httpx>=0.27",
    "python-dotenv>=1.0",
]

[tool.setuptools.packages.find]
where = [".."]
include = ["frontend*"]
