[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "viaticum-pioneer"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31",
    "openai>=1.30",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
eval = ["bert-score>=0.3", "evaluate>=0.4"]
